<resources>
    <string name="app_name">Archery Timer Remote</string>
    <string name="title">Archery Timer Remote Control</string>
    <string name="next_end_button">Next end</string>
    <string name="start_timer_button">Start/Resume timer</string>
    <string name="pause_timer_button">Pause timer</string>
    <string name="fast_forward_button">Skip</string>
    <string name="connect_button">Connect</string>
    <string name="try_connect_button">Try to connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="ip_number_label">IP Number</string>
    <string name="ip_port_label">Port Number</string>
    <string name="ip_number_default">192.168.4.1</string>
    <string name="callup_time_label">Callup time:</string>
    <string name="fullscreen_button">Toggle fullscreen</string>
    <string name="end_time_label">End time:</string>
    <string name="warn_time_label">Warn time:</string>
    <string name="settings_button">Settings</string>
    <string name="settings_done_button">Done</string>
    <string name="settings_revert_button">Revert</string>
    <string name="discovered_server_button">No Gadget Found</string>
    <string name="expert_connect_help">If the service is not discovered, use the fields and buttons below to attempt to manually enter network details to connect to the timer gadget.</string>
    <string name="discovered_server_help">The timer gadget should be found automatically. Use this button to connect to it.</string>
    <string name="disconnect_help">However you connected, you can use this \"disconnect\" button to disconnect again to make the gadget available to other remotes.</string>
    <string name="practice_check">Practice</string>
    <string name="makeup_end_button">Makeup End</string>
    <string name="line_1_label">Line 1</string>
    <string name="enable_second_line">Second Line</string>
    <string name="toggle_lines">Alternate Lines</string>
    <string name="emergency_stop_button">EMERGENCY STOP</string>
</resources>
